xee-xpath-ast/src/ast/snapshots/xee_xpath_ast__ast__parse3__tests__additive_expr_repeat.snap
---
source: xee-xpath-ast/src/ast/parse3.rs
expression: "parse_expr_single(\"1 + 2 + 3\")"
---
Ok(Path(PathExpr(
  steps: [
    PrimaryExpr(Expr(Expr([
      Binary(BinaryExpr(
        operator: Add,
        left: PathExpr(
          steps: [
            PrimaryExpr(Expr(Expr([
              Binary(BinaryExpr(
                operator: Add,
                left: PathExpr(
                  steps: [
                    PrimaryExpr(Literal(Integer((Positive, [
                      1,
                    ])))),
                  ],
                ),
                right: PathExpr(
                  steps: [
                    PrimaryExpr(Literal(Integer((Positive, [
                      2,
                    ])))),
                  ],
                ),
              )),
            ]))),
          ],
        ),
        right: PathExpr(
          steps: [
            PrimaryExpr(Literal(Integer((Positive, [
              3,
            ])))),
          ],
        ),
      )),
    ]))),
  ],
)))
