xee-xpath-ast/src/ast/snapshots/xee_xpath_ast__ast__parse3__tests__attribute_test_name_arg_type_arg.snap
---
source: xee-xpath-ast/src/ast/parse3.rs
expression: "parse_expr_single(\"self::attribute(foo, bar)\")"
---
Ok(Path(PathExpr(
  steps: [
    AxisStep(AxisStep(
      axis: Self_,
      node_test: KindTest(Attribute(Some(AttributeTest(
        name_test: Name(Name(
          name: "foo",
          prefix: None,
          namespace: None,
        )),
        type_name: Some(Name(
          name: "bar",
          prefix: None,
          namespace: None,
        )),
      )))),
      predicates: [],
    )),
  ],
)))
