xee-xpath-ast/src/ast/snapshots/xee_xpath_ast__ast__parse3__tests__attribute_test_star_arg.snap
---
source: xee-xpath-ast/src/ast/parse3.rs
expression: "parse_expr_single(\"self::attribute(*)\")"
---
Ok(Path(PathExpr(
  steps: [
    AxisStep(AxisStep(
      axis: Self_,
      node_test: KindTest(Attribute(Some(AttributeTest(
        name_test: Wildcard,
        type_name: None,
      )))),
      predicates: [],
    )),
  ],
)))
