xee-xpath-ast/src/ast/snapshots/xee_xpath_ast__ast__parse3__tests__cast_as.snap
---
source: xee-xpath-ast/src/ast/parse3.rs
expression: "parse_expr_single(\"1 cast as xs:integer\")"
---
Ok(Path(PathExpr(
  steps: [
    PrimaryExpr(Expr(Expr([
      Apply(ApplyExpr(
        path_expr: PathExpr(
          steps: [
            PrimaryExpr(Literal(Integer((Positive, [
              1,
            ])))),
          ],
        ),
        operator: Cast(SingleType(
          name: Name(
            name: "integer",
            prefix: Some("xs"),
            namespace: Some("http://www.w3.org/2001/XMLSchema"),
          ),
          optional: false,
        )),
      )),
    ]))),
  ],
)))
